# Resume-Site

./: .gitattributes  .gitignore  .railwayignore  .replit  CUTOVER.md  DEPLOY.md  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  start.sh  vite-plugin-meta-images.ts
agent-corpus/: 00-interview-questions.md  01-career-narrative.md  02-case-studies.md  03-faq-logistics.md  04-philosophy-working-style.md  05-boundaries-policy.md  06-system-prompt.md  07-resume.md  README.md
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1776500278201.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1776513977983.txt  Pasted--Design-System-Specification-The-Lucid-Flow-1-Overview-_1775499561315.txt  Pasted--Redesign-brief-rohitpathak-com-Refactor-the-visual-des_1776499809900.txt  card2_1776502835917.html  card3_1776502835917.html
client/: index.html
client/src/: App.tsx  index.css
client/src/pages/: geo-agentic-int.tsx  hero-nl-preview.tsx  hero-wall-preview.tsx  home.tsx  section-blend-preview.tsx
geo_rag/: .gitignore  .railwayignore  README.md  railway.toml  repair_index.py  requirements.txt  test_ingest.py
geo_rag/backend/: main.py
geo_rag/data/faiss_index/: store_data.json
geo_rag/src/: agent.py  anomaly.py  config.py  data_loader.py  pdf_ingest.py  tools.py  vector_store.py  wells.py
script/: agent-eval.ts  agent-ingest.ts
scripts/: railway-setup.sh  smoke-test.sh
server/: index.ts  routes.ts
server/agent/: corpus-index.json  index.ts  system-prompt.ts
shared/: schema.ts
(+14 files in other folders)
