[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "llama-parse>=0.6.94",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]
